--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -37,6 +37,22 @@
     "selectModel_close": "Cerrar",
     "selectModel_search_placeholder": "Buscar modelos..."
   },
+  "imageGeneration": {
+    "title": "Imagen Generación",
+    "provider": "Proveedor",
+    "model": "Modelo",
+    "imageSize": "Tamaño de Imagen",
+    "generationCount": "Cantidad de Generaciones",
+    "randomSeed": "Semilla Aleatoria",
+    "generateButton": "Generar",
+    "generating": "Generando...",
+    "prompt": "Prompt",
+    "promptPlaceholder": "Describe la imagen que quieres crear, ej.: un lago tranquilo al atardecer con montañas en el fondo",
+    "results": "Resultados Generados",
+    "placeholderText": "Ingresa un prompt y haz clic en generar para crear imágenes",
+    "apiKeyMissing": "Por favor, configura tu clave API para el proveedor seleccionado en la configuración.",
+    "seedHelp": "Semilla para resultados reproducibles"
+  },
   "settings": {
     "language": "Idioma",
     "apiKey": "Clave API",
