--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -37,6 +37,22 @@
     "selectModel_close": "關閉",
     "selectModel_search_placeholder": "搜尋模型..."
   },
+  "imageGeneration": {
+    "title": "圖片生成",
+    "provider": "提供商",
+    "model": "模型",
+    "imageSize": "圖片尺寸",
+    "generationCount": "生成數量",
+    "randomSeed": "隨機種子",
+    "generateButton": "生成",
+    "generating": "生成中...",
+    "prompt": "提示詞",
+    "promptPlaceholder": "描述你想創建的圖片，例如：一個寧靜的湖泊，夕陽西下，遠處是群山",
+    "results": "生成結果",
+    "placeholderText": "輸入提示詞並點擊生成按鈕來創建圖片",
+    "apiKeyMissing": "請在設定中為所選提供商設置您的 API 金鑰。",
+    "seedHelp": "用於可重現結果的種子"
+  },
   "settings": {
     "language": "語言",
     "apiKey": "API 金鑰",
