Function: Translation Page now will call AI Provider

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -34,7 +34,7 @@
   },
   "translation": {
     "title": "Translation",
-    "sourceLanguage": "Source Language",
+    "sourceLanguageWithAutoSelected": "Source Language will be auto detected",
     "result": "Translation Result",
     "translateButton": "Translate",
     "translating": "Translating...",
