--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -40,6 +40,7 @@
     "translating": "Traduciendo...",
     "inputPlaceholder": "Introduce el texto a traducir...",
     "resultPlaceholder": "La traducción aparecerá aquí",
+    "copy": "Copiar",
     "apiKeyMissing": "Por favor, configura tu clave API para el proveedor seleccionado en la configuración.",
     "autoDetect": "Detección automática",
     "english": "Inglés",
