--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -40,6 +40,7 @@
     "translating": "翻譯中...",
     "inputPlaceholder": "輸入要翻譯的文字...",
     "resultPlaceholder": "翻譯結果將顯示在這裡",
+    "copy": "複製",
     "apiKeyMissing": "請在設定中為所選提供商設置您的 API 金鑰。",
     "autoDetect": "自動偵測",
     "english": "英文",
