--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -54,6 +54,34 @@
     "japanese": "日本語",
     "korean": "韓国語"
   },
+  "fileManagement": {
+    "title": "ファイル管理",
+    "noFiles": "ファイルがありません",
+    "noFilesDescription": "アップロードしたファイルがここに表示されます",
+    "uploadButton": "ファイルをアップロード",
+    "uploading": "アップロード中...",
+    "fileName": "ファイル名",
+    "fileType": "種類",
+    "fileSize": "サイズ",
+    "actions": "操作",
+    "rename": "名前の変更",
+    "export": "エクスポート",
+    "delete": "削除",
+    "open": "開く",
+    "search": "ファイルを検索...",
+    "confirmDelete": "ファイルの削除",
+    "confirmDeleteMessage": "このファイルを削除してもよろしいですか？この操作は元に戻せません。",
+    "renameFile": "ファイル名の変更",
+    "newFileName": "新しいファイル名",
+    "sortBy": "並び替え",
+    "categories": {
+      "all": "すべてのファイル",
+      "document": "ドキュメント",
+      "image": "画像",
+      "audio": "音声",
+      "other": "その他"
+    }
+  },
   "selectModel": {
     "selectModel_title": "モデルを選択",
     "selectModel_close": "閉じる",
