--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -73,7 +73,14 @@
     "confirmDeleteMessage": "Are you sure you want to delete this file? This action cannot be undone.",
     "renameFile": "Rename File",
     "newFileName": "New file name",
-    "sortBy": "Sort by"
+    "sortBy": "Sort by",
+    "categories": {
+      "all": "All Files",
+      "document": "Documents",
+      "image": "Images",
+      "audio": "Audio",
+      "other": "Others"
+    }
   },
   "selectModel": {
     "selectModel_title": "Select Model",
