--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -54,6 +54,34 @@
     "japanese": "日语",
     "korean": "韩语"
   },
+  "fileManagement": {
+    "title": "文件管理",
+    "noFiles": "暂无文件",
+    "noFilesDescription": "您上传的文件将会显示在这里",
+    "uploadButton": "上传文件",
+    "uploading": "上传中...",
+    "fileName": "文件名称",
+    "fileType": "类型",
+    "fileSize": "大小",
+    "actions": "操作",
+    "rename": "重命名",
+    "export": "导出",
+    "delete": "删除",
+    "open": "打开",
+    "search": "搜索文件...",
+    "confirmDelete": "删除文件",
+    "confirmDeleteMessage": "确定要删除此文件吗？此操作无法撤销。",
+    "renameFile": "重命名文件",
+    "newFileName": "新文件名",
+    "sortBy": "排序方式",
+    "categories": {
+      "all": "所有文件",
+      "document": "文档",
+      "image": "图片",
+      "audio": "音频",
+      "other": "其他"
+    }
+  },
   "selectModel": {
     "selectModel_title": "选择模型",
     "selectModel_close": "关闭",
