--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -54,6 +54,34 @@
     "japanese": "日文",
     "korean": "韓文"
   },
+  "fileManagement": {
+    "title": "檔案管理",
+    "noFiles": "暫無檔案",
+    "noFilesDescription": "您上傳的檔案將會顯示在這裡",
+    "uploadButton": "上傳檔案",
+    "uploading": "上傳中...",
+    "fileName": "檔案名稱",
+    "fileType": "類型",
+    "fileSize": "大小",
+    "actions": "操作",
+    "rename": "重新命名",
+    "export": "匯出",
+    "delete": "刪除",
+    "open": "開啟",
+    "search": "搜尋檔案...",
+    "confirmDelete": "刪除檔案",
+    "confirmDeleteMessage": "確定要刪除此檔案嗎？此操作無法撤銷。",
+    "renameFile": "重新命名檔案",
+    "newFileName": "新檔案名稱",
+    "sortBy": "排序方式",
+    "categories": {
+      "all": "所有檔案",
+      "document": "文件",
+      "image": "圖片",
+      "audio": "音訊",
+      "other": "其他"
+    }
+  },
   "selectModel": {
     "selectModel_title": "選擇模型",
     "selectModel_close": "關閉",
