Fix: Add updatedAt date to fileData

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -63,6 +63,7 @@
     "fileName": "File Name",
     "fileType": "Type",
     "fileSize": "Size",
+    "updatedAt": "Last Updated",
     "actions": "Actions",
     "rename": "Rename",
     "export": "Export",
