--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -56,13 +56,14 @@
   },
   "fileManagement": {
     "title": "Gestión de Archivos",
-    "noFiles": "Aún no hay archivos",
-    "noFilesDescription": "Tus archivos subidos aparecerán aquí",
-    "uploadButton": "Subir Archivo",
-    "uploading": "Subiendo...",
+    "noFiles": "No hay archivos todavía",
+    "noFilesDescription": "Los archivos cargados aparecerán aquí",
+    "uploadButton": "Cargar Archivo",
+    "uploading": "Cargando...",
     "fileName": "Nombre del Archivo",
     "fileType": "Tipo",
     "fileSize": "Tamaño",
+    "updatedAt": "Última Actualización",
     "actions": "Acciones",
     "rename": "Renombrar",
     "export": "Exportar",
