--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -56,13 +56,14 @@
   },
   "fileManagement": {
     "title": "ファイル管理",
-    "noFiles": "ファイルがありません",
+    "noFiles": "ファイルはまだありません",
     "noFilesDescription": "アップロードしたファイルがここに表示されます",
     "uploadButton": "ファイルをアップロード",
     "uploading": "アップロード中...",
     "fileName": "ファイル名",
-    "fileType": "種類",
+    "fileType": "タイプ",
     "fileSize": "サイズ",
+    "updatedAt": "最終更新日",
     "actions": "操作",
     "rename": "名前の変更",
     "export": "エクスポート",
