--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -63,6 +63,7 @@
     "fileName": "文件名称",
     "fileType": "类型",
     "fileSize": "大小",
+    "updatedAt": "最后更新",
     "actions": "操作",
     "rename": "重命名",
     "export": "导出",
