--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -58,7 +58,7 @@
     "title": "文件管理",
     "noFiles": "暂无文件",
     "noFilesDescription": "您上传的文件将会显示在这里",
-    "uploadButton": "上传文件",
+    "uploadButton": "导入文件",
     "uploading": "上传中...",
     "fileName": "文件名称",
     "fileType": "类型",
