--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -30,7 +30,11 @@
     "edit": "编辑",
     "regenerate": "重新生成",
     "stopResponse": "停止响应",
-    "pressShiftEnterToChangeLines": "按 Shift+Enter 换行"
+    "pressShiftEnterToChangeLines": "按 Shift+Enter 换行",
+    "generateImage": "生成图片",
+    "imageGenerationNotAvailable": "图片生成不可用",
+    "selectImageProvider": "选择图片提供商",
+    "noImageProvidersAvailable": "没有可用的图片提供商"
   },
   "translation": {
     "title": "翻译",
@@ -103,6 +107,22 @@
     "placeholderText": "输入提示词并点击生成按钮来创建图片",
     "apiKeyMissing": "请在设置中为所选提供商设置您的 API 密钥。",
     "seedHelp": "用于可重现结果的种子"
+  },
+  "mcpServer": {
+    "title": "MCP 服务器",
+    "addServer": "添加服务器",
+    "serverName": "服务器名称",
+    "serverNamePlaceholder": "输入服务器名称",
+    "transportType": "传输类型",
+    "serverURL": "服务器 URL",
+    "serverURLPlaceholder": "输入服务器 URL",
+    "headers": "头信息 (JSON)",
+    "default": "默认",
+    "imageGeneration": "图片生成",
+    "noServers": "尚未配置 MCP 服务器",
+    "addServerPrompt": "点击\"添加服务器\"按钮创建一个",
+    "cannotEditDefault": "无法编辑默认服务器",
+    "cannotDeleteDefault": "无法删除默认服务器"
   },
   "settings": {
     "language": "语言",
