--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,6 +33,9 @@
     "pressShiftEnterToChangeLines": "Press Shift+Enter to change lines",
     "generateImage": "Generate Image",
     "imageGenerationNotAvailable": "Image generation not available",
+    "imageGenerationDisabled": "Image generation is disabled",
+    "enableImageGeneration": "Enable image generation",
+    "disableImageGeneration": "Disable image generation",
     "selectImageProvider": "Select Image Provider",
     "noImageProvidersAvailable": "No image providers available"
   },
