--- a/src/locales/ja/translation.json
+++ b/src/locales/ja/translation.json
@@ -33,6 +33,9 @@
     "pressShiftEnterToChangeLines": "Shift+Enterを押して行を変更",
     "generateImage": "画像を生成",
     "imageGenerationNotAvailable": "画像生成は利用できません",
+    "imageGenerationDisabled": "画像生成は無効になっています",
+    "enableImageGeneration": "画像生成を有効にする",
+    "disableImageGeneration": "画像生成を無効にする",
     "selectImageProvider": "画像プロバイダーを選択",
     "noImageProvidersAvailable": "利用可能な画像プロバイダーがありません"
   },
