--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -33,6 +33,9 @@
     "pressShiftEnterToChangeLines": "按 Shift+Enter 換行",
     "generateImage": "生成圖片",
     "imageGenerationNotAvailable": "圖片生成不可用",
+    "imageGenerationDisabled": "圖片生成已禁用",
+    "enableImageGeneration": "啟用圖片生成",
+    "disableImageGeneration": "禁用圖片生成",
     "selectImageProvider": "選擇圖片提供商",
     "noImageProvidersAvailable": "沒有可用的圖片提供商"
   },
