Fix: Add image generation display to markdown message

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -103,7 +103,10 @@
     "generationCount": "Generation Count",
     "randomSeed": "Random Seed",
     "generateButton": "Generate",
-    "generating": "Generating...",
+    "generating": "Generating image...",
+    "creatingImage": "AI is creating your image",
+    "generationFailed": "Image generation failed",
+    "generatedImage": "Generated image",
     "prompt": "Prompt",
     "promptPlaceholder": "Describe the image you want to create, e.g.: a peaceful lake at sunset with mountains in the background",
     "results": "Generated Results",
