--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -96,16 +96,19 @@
     "selectModel_search_placeholder": "Buscar modelos..."
   },
   "imageGeneration": {
-    "title": "Imagen Generación",
+    "title": "Generación de Imágenes",
     "provider": "Proveedor",
     "model": "Modelo",
     "imageSize": "Tamaño de Imagen",
     "generationCount": "Cantidad de Generaciones",
     "randomSeed": "Semilla Aleatoria",
     "generateButton": "Generar",
-    "generating": "Generando...",
+    "generating": "Generando imagen...",
+    "creatingImage": "La IA está creando tu imagen",
+    "generationFailed": "Falló la generación de imagen",
+    "generatedImage": "Imagen generada",
     "prompt": "Prompt",
-    "promptPlaceholder": "Describe la imagen que quieres crear, ej.: un lago tranquilo al atardecer con montañas en el fondo",
+    "promptPlaceholder": "Describe la imagen que quieres crear, p.ej.: un lago tranquilo al atardecer con montañas en el fondo",
     "results": "Resultados Generados",
     "placeholderText": "Ingresa un prompt y haz clic en generar para crear imágenes",
     "apiKeyMissing": "Por favor, configura tu clave API para el proveedor seleccionado en la configuración.",
