--- a/src/locales/zh-TW/translation.json
+++ b/src/locales/zh-TW/translation.json
@@ -96,19 +96,22 @@
     "selectModel_search_placeholder": "搜尋模型..."
   },
   "imageGeneration": {
-    "title": "圖片生成",
-    "provider": "提供商",
+    "title": "圖像生成",
+    "provider": "提供者",
     "model": "模型",
-    "imageSize": "圖片尺寸",
+    "imageSize": "圖像大小",
     "generationCount": "生成數量",
     "randomSeed": "隨機種子",
     "generateButton": "生成",
-    "generating": "生成中...",
+    "generating": "正在生成圖像...",
+    "creatingImage": "AI正在創建您的圖像",
+    "generationFailed": "圖像生成失敗",
+    "generatedImage": "生成的圖像",
     "prompt": "提示詞",
-    "promptPlaceholder": "描述你想創建的圖片，例如：一個寧靜的湖泊，夕陽西下，遠處是群山",
+    "promptPlaceholder": "描述您想要創建的圖像，例如：日落時分的平靜湖泊，背景是山脈",
     "results": "生成結果",
-    "placeholderText": "輸入提示詞並點擊生成按鈕來創建圖片",
-    "apiKeyMissing": "請在設定中為所選提供商設置您的 API 金鑰。",
+    "placeholderText": "輸入提示詞並點擊生成按鈕創建圖像",
+    "apiKeyMissing": "請在設定中為所選提供者設置API金鑰。",
     "seedHelp": "用於可重現結果的種子"
   },
   "mcpServer": {
