--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -100,15 +100,18 @@
     "provider": "제공자",
     "model": "모델",
     "imageSize": "이미지 크기",
-    "generationCount": "생성 수량",
+    "generationCount": "생성 수",
     "randomSeed": "랜덤 시드",
     "generateButton": "생성",
-    "generating": "생성 중...",
+    "generating": "이미지 생성 중...",
+    "creatingImage": "AI가 이미지를 만들고 있습니다",
+    "generationFailed": "이미지 생성 실패",
+    "generatedImage": "생성된 이미지",
     "prompt": "프롬프트",
-    "promptPlaceholder": "만들고 싶은 이미지를 설명하세요. 예: 석양이 지는 고요한 호수, 배경에는 산맥",
-    "results": "생성 결과",
-    "placeholderText": "프롬프트를 입력하고 생성 버튼을 클릭하여 이미지 생성",
-    "apiKeyMissing": "선택한 제공자의 API 키를 설정에서 설정하세요.",
+    "promptPlaceholder": "원하는 이미지를 설명하세요. 예: 일몰 시 평화로운 호수와 배경에 산이 있는 풍경",
+    "results": "생성된 결과",
+    "placeholderText": "프롬프트를 입력하고 생성 버튼을 클릭하여 이미지를 만드세요",
+    "apiKeyMissing": "설정에서 선택한 제공자의 API 키를 설정해 주세요.",
     "seedHelp": "재현 가능한 결과를 위한 시드"
   },
   "mcpServer": {
