--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -96,19 +96,22 @@
     "selectModel_search_placeholder": "搜索模型..."
   },
   "imageGeneration": {
-    "title": "图片生成",
+    "title": "图像生成",
     "provider": "提供商",
     "model": "模型",
-    "imageSize": "图片尺寸",
+    "imageSize": "图像尺寸",
     "generationCount": "生成数量",
     "randomSeed": "随机种子",
     "generateButton": "生成",
-    "generating": "生成中...",
+    "generating": "正在生成图像...",
+    "creatingImage": "AI正在创建您的图像",
+    "generationFailed": "图像生成失败",
+    "generatedImage": "生成的图像",
     "prompt": "提示词",
-    "promptPlaceholder": "描述你想创建的图片，例如：一个宁静的湖泊，夕阳西下，远处是群山",
+    "promptPlaceholder": "描述您想要创建的图像，例如：日落时分的平静湖泊，背景是山脉",
     "results": "生成结果",
-    "placeholderText": "输入提示词并点击生成按钮来创建图片",
-    "apiKeyMissing": "请在设置中为所选提供商设置您的 API 密钥。",
+    "placeholderText": "输入提示词并点击生成按钮创建图像",
+    "apiKeyMissing": "请在设置中为所选提供商设置API密钥。",
     "seedHelp": "用于可重现结果的种子"
   },
   "mcpServer": {
